changes: Added authentication filter and CORS configuration for API Gateway.